<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_activity_scroll"
    >

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/task_activity_ivStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/new_status"/>

                    <TextView
                        android:id="@+id/task_activity_tvStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="Статус обращения"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/task_activity_tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:text="10.01.2016"
                        android:textSize="12dp"
                        />

                    <TextView
                        android:id="@+id/task_activity_tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvDate"
                        android:text="21:35:00"
                        android:textSize="12dp"
                        />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/task_activity_linLayService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_activity_service_label"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/task_activity_linLayAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_activity_linLayService"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_activity_address_label"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/task_activity_linLayInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_activity_linLayAddress"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_activity_info_label"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/task_activity_linLayInfo"
                android:layout_below="@+id/task_activity_linLayInfo"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_activity_photo_cnt_tv"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_activity_photo_cnt_label"/>
            </LinearLayout>

            <ru.sbrf.zsb.android.helper.ExpandableHeightGridView xmlns:android="http://schemas.android.com/apk/res/android"
                                                                 android:id="@+id/task_activity_photo_grid"
                                                                 android:layout_width="fill_parent"
                                                                 android:layout_height="fill_parent"
                                                                 android:gravity="center"
                                                                 android:numColumns="auto_fit"
                                                                 android:scrollbars="horizontal"
                                                                 android:stretchMode="columnWidth">
            </ru.sbrf.zsb.android.helper.ExpandableHeightGridView>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
